--- a/android/lib/resource/src/main/res/values-ko/strings.xml
+++ b/android/lib/resource/src/main/res/values-ko/strings.xml
@@ -73,9 +73,9 @@
     <string name="confirm_no_email">연락처 없이 문제 보고서를 보내려고 합니다. 보고서에 대한 답변을 원하면 이메일 주소를 입력해야 합니다.</string>
     <string name="confirm_removal">예, 장치에서 로그아웃</string>
     <string name="congrats">축하합니다!</string>
+    <string name="connect">연결</string>
     <string name="connected">연결됨</string>
     <string name="connected_using_daita">%1$s 사용 %2$s</string>
-    <string name="connecting">연결 중</string>
     <string name="connecting_to_daemon">Mullvad 시스템 서비스에 연결하는 중...</string>
     <string name="connection_details_in">인</string>
     <string name="continue_login">로그인 계속하기</string>
@@ -119,7 +119,6 @@
     <string name="discard_changes">변경 사항을 취소하시겠습니까?</string>
     <string name="disconnect">연결 끊기</string>
     <string name="disconnected">연결 끊김</string>
-    <string name="disconnecting">연결 해제 중</string>
     <string name="dismiss">해제</string>
     <string name="dns_content_blockers_custom_dns_warning">주의: 이 설정은 &lt;b&gt;사용자 지정 DNS 서버 사용&lt;/b&gt;과 함께 사용할 수 없습니다.</string>
     <string name="dns_content_blockers_info">이 기능이 활성화되면 광고, 맬웨어, 트래커 등을 배포하는 것으로 알려진 특정 도메인이나 웹사이트에 장치가 연결하지 않게 방지됩니다.</string>
@@ -253,7 +252,6 @@
     <string name="quantum_resistant_info_first_paragaph">이 기능은 WireGuard 터널이 양자 컴퓨터의 잠재적인 공격에 맞서도록 합니다.</string>
     <string name="quantum_resistant_info_second_paragaph">이를 위해 양자 안전 알고리즘을 사용하여 추가 키 교환을 수행하고 결과를 WireGuard의 일반 암호화에 혼합하는 방법이 이용됩니다. 이 추가 단계는 새 터널이 설정될 때마다 약 500kiB의 트래픽을 사용합니다.</string>
     <string name="quantum_resistant_title">양자 저항 터널</string>
-    <string name="reconnecting">다시 연결 중</string>
     <string name="redeem">사용</string>
     <string name="redeem_voucher">바우처 사용</string>
     <string name="remove_button">제거</string>
